# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  example.html  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kaytto-ohjeet.md  pylint.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: luokkakaavio.md  sekvenssikaavio.md
src/: main.py
src/editors/: main.py  source.py  visual.py
src/tests/: file_database_test.py  file_handler_test.py
src/ui/: ui.py
src/utils/: file_database.py  file_handler.py
viikko2/maksukortti/src/tests/: maksukortti_test.py
